--- a/printer.cfg
+++ b/printer.cfg
@@ -105,8 +105,8 @@ square_corner_velocity: 5
 [bltouch]
 sensor_pin: ar18 
 control_pin: ar11 
-x_offset:28
-y_offset:-33
+x_offset:34
+y_offset:-39
 z_offset: 2.38
 speed:10
 samples:1
@@ -123,7 +123,7 @@ z_hop_speed: 20
 
 [bed_mesh]
 speed: 800
-mesh_min: 30,30
+mesh_min: 35,35
 mesh_max: 270,270
 probe_count: 9,9
 mesh_pps: 2,2
@@ -172,10 +172,8 @@ screw_thread: CW-M5
 
 [gcode_macro G29]
 gcode:
- BED_MESH_CLEAR
  G28
- BED_MESH_CALIBRATE
- BED_MESH_PROFILE SAVE=x1
+ BED_MESH_PROFILE LOAD="default"
  
 #[gcode_macro G34]
 #gcode:
@@ -242,6 +240,18 @@ pause_on_runout: True
 runout_gcode: PAUSE
 insert_gcode: RESUME
 switch_pin: ar19
+
+[board_pins]
+aliases:
+    # EXP1 header
+    EXP1_1=PC0, EXP1_3=PH0, EXP1_5=PA1, EXP1_7=PA5, EXP1_9=<GND>,
+    EXP1_2=PC2, EXP1_4=PH1, EXP1_6=PA3, EXP1_8=PA7, EXP1_10=<5V>,
+    # EXP2 header
+    EXP2_1=PB3, EXP2_3=PC6, EXP2_5=PC4, EXP2_7=PL0,  EXP2_9=<GND>,
+    EXP2_2=PB1, EXP2_4=PB0, EXP2_6=PB2, EXP2_8=PG0, EXP2_10=<NC>
+    # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp1"
+# See the MKS Lcd Config path file for definitions of common LCD displays.
+[include mks_lcd_12864_v3.cfg]
 
 # Arduino aliases for atmega2560/1280 (Arduino mega) boards
 [board_pins arduino-mega]
