--- a/mks_lcd_12864_v3.cfg
+++ b/mks_lcd_12864_v3.cfg
@@ -21,7 +21,7 @@ spi_software_sclk_pin: EXP2_2
 [output_pin beeper]
 pin: EXP1_1
 
-[neopixel mks_mini12864]
+[neopixel lcd_backlight]
 pin: EXP1_6
 chain_count: 3
 color_order: RGB
