--- a/printer.cfg
+++ b/printer.cfg
@@ -5,6 +5,8 @@ path: ~/printer_data/gcodes
 
 [display_status]
 
+[exclude_object]
+
 # Updated 2021-12-21
 [stepper_x]
 step_pin: ar54
@@ -57,10 +59,10 @@ rotation_distance: 7
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: ar10
-control: pid
-pid_Kp: 17.59
-pid_Ki: 1.83
-pid_Kd: 42.14
+#control: pid
+#pid_Kp: 17.59
+#pid_Ki: 1.83
+#pid_Kd: 42.14
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: analog13
 min_extrude_temp: 190
@@ -71,10 +73,10 @@ max_extrude_cross_section: 2.0
 
 [heater_bed]
 heater_pin: ar8
-control: pid 
-pid_Kp: 22.98
-pid_Ki: 1.26
-pid_Kd: 279.88
+# control: pid 
+# pid_kp: 37.283
+# pid_ki: 0.206
+# pid_kd: 1684.713
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: analog14
 min_temp: 5
@@ -84,7 +86,7 @@ max_temp: 150
 pin: ar9
 kick_start_time: 0.500
 
-[heater_fan my_nozzle_fan]
+[heater_fan nozzle_fan]
 pin:ar7
 heater: extruder
 heater_temp: 50.0
@@ -107,7 +109,7 @@ sensor_pin: ar18
 control_pin: ar11 
 x_offset:34
 y_offset:-39
-z_offset: 2.38
+#z_offset: 2.38
 speed:10
 samples:1
 samples_result:average
@@ -234,11 +236,11 @@ gcode:
 [pause_resume]
 recover_velocity: 50.
 
-[filament_switch_sensor my_sensor]
+[filament_switch_sensor filament_sensor]
 #Move filament runout sensor from TFT to X+ endstop pin. Uncomment all but this line if you want to use this
 pause_on_runout: True
-runout_gcode: PAUSE
-insert_gcode: RESUME
+# runout_gcode: PAUSE
+# insert_gcode: RESUME 
 switch_pin: ar19
 
 [board_pins]
@@ -279,4 +281,44 @@ aliases:
     ml75=PJ4, ml76=PJ5, ml77=PJ6, ml78=PE2, ml79=PE6,
     ml80=PE7, ml81=PD4, ml82=PD5, ml83=PD6, ml84=PH2,
     ml85=PH7
-	
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	-0.092500, -0.092500, -0.092500, -0.120000, -0.105000, -0.135000, -0.102500, -0.087500, -0.050000
+#*# 	-0.075000, -0.100000, -0.112500, -0.132500, -0.117500, -0.150000, -0.107500, -0.105000, -0.065000
+#*# 	-0.097500, -0.120000, -0.115000, -0.132500, -0.115000, -0.145000, -0.102500, -0.082500, -0.040000
+#*# 	-0.070000, -0.077500, -0.082500, -0.110000, -0.095000, -0.137500, -0.082500, -0.107500, -0.067500
+#*# 	-0.052500, -0.075000, -0.060000, -0.077500, -0.040000, -0.092500, -0.030000, -0.037500, -0.012500
+#*# 	-0.012500, -0.020000, -0.037500, -0.067500, -0.042500, -0.090000, -0.052500, -0.070000, -0.045000
+#*# 	-0.045000, -0.062500, -0.065000, -0.082500, -0.052500, -0.100000, -0.052500, -0.045000, -0.020000
+#*# 	-0.047500, -0.052500, -0.060000, -0.090000, -0.070000, -0.110000, -0.077500, -0.072500, -0.042500
+#*# 	-0.167500, -0.160000, -0.135000, -0.142500, -0.107500, -0.140000, -0.092500, -0.070000, -0.025000
+#*# x_count = 9
+#*# y_count = 9
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 35.0
+#*# max_x = 269.96000000000004
+#*# min_y = 35.0
+#*# max_y = 269.96
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 20.426
+#*# pid_ki = 1.056
+#*# pid_kd = 98.812
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 37.283
+#*# pid_ki = 0.206
+#*# pid_kd = 1684.713
+#*#
+#*# [bltouch]
+#*# z_offset = 2.277
