level macros and reduced velocities

--- a/printer.cfg
+++ b/printer.cfg
@@ -1,4 +1,7 @@
 [include mainsail.cfg]
+[include macros.cfg]
+[include KAMP/adaptive_mesh.cfg]
+[include KAMP/line_purge.cfg]
 
 [virtual_sdcard]
 path: ~/printer_data/gcodes
@@ -6,6 +9,11 @@ path: ~/printer_data/gcodes
 [display_status]
 
 [exclude_object]
+
+[menu __main __octoprint]
+type: disabled
+
+# Sidewinder X1 Specific Configuration
 
 # Updated 2021-12-21
 [stepper_x]
@@ -58,6 +66,7 @@ microsteps: 16
 rotation_distance: 7.328
 nozzle_diameter: 0.400
 filament_diameter: 1.750
+pressure_advance: 0.055
 heater_pin: ar10
 #control: pid
 #pid_Kp: 17.59
@@ -99,7 +108,7 @@ serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 [printer]
 kinematics: cartesian
 max_velocity: 200
-max_accel: 3000
+max_accel: 1000
 max_z_velocity: 50
 max_z_accel: 100
 square_corner_velocity: 5 
@@ -172,67 +181,6 @@ screw_thread: CW-M5
 #speed: 100
 #horizontal_move_z: 10
 
-[gcode_macro G29]
-gcode:
- G28
- BED_MESH_PROFILE LOAD="default"
- 
-#[gcode_macro G34]
-#gcode:
-#     G28
-#     Z_TILT_ADJUST		
-
-[gcode_macro G35]
-gcode:
-     G28
-     SCREWS_TILT_CALCULATE
-
-[gcode_macro START_PRINT]
-
-gcode:
-    # Reference https://github.com/Klipper3d/klipper/blob/master/docs/Command_Templates.md#template-expansion
-    # On how to override default parameters
-    {% set BED_TEMP = 60 %}
-    {% set EXTRUDER_TEMP = 200 %}
-    # Home the printer
-	G28
-    #Probe Everytime
-	G29 
-	#load saved mesh at print start instead of probe. Uncomment to use but comment out G29
-	#BED_MESH_PROFILE LOAD=x1   					 
-    # Use absolute coordinates
-    G90
-    # Move the nozzle near the bed
-    G1 X0 Y0 Z5 F3000
-    # Move the nozzle very close to the bed
-    G1 Z0.15 F300
-    G92 E0 ;Reset Extruder
-    G1 X20 Y5 Z0.3 F5000.0			   
-    G1 Z0.3 F1000 				    
-    G1 X200 Y5 F1500.0 E15 			   
-    G1 X200 Y5.3 Z0.3 F5000.0			    
-    G1 X5.3  Y5.3 Z0.3 F1500.0 E30 			
-    G1 Z3 F3000 				     
-    G21 ; set units to millimeters
-    G90 ; use absolute coordinates
-    M83 ; use relative	distances for extrusion
-    G92 E0
-
-[gcode_macro END_PRINT]
-gcode:
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # Move nozzle away from print while retracting
-    G91
-    G1 X-2 Y-2 E-3 F300
-    # Raise nozzle by 10mm
-    G1 Z30 F3000
-    G90
-    # Disable steppers
-    M84
-
 [pause_resume]
 recover_velocity: 50.
 
@@ -288,25 +236,19 @@ aliases:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.092500, -0.092500, -0.092500, -0.120000, -0.105000, -0.135000, -0.102500, -0.087500, -0.050000
-#*# 	-0.075000, -0.100000, -0.112500, -0.132500, -0.117500, -0.150000, -0.107500, -0.105000, -0.065000
-#*# 	-0.097500, -0.120000, -0.115000, -0.132500, -0.115000, -0.145000, -0.102500, -0.082500, -0.040000
-#*# 	-0.070000, -0.077500, -0.082500, -0.110000, -0.095000, -0.137500, -0.082500, -0.107500, -0.067500
-#*# 	-0.052500, -0.075000, -0.060000, -0.077500, -0.040000, -0.092500, -0.030000, -0.037500, -0.012500
-#*# 	-0.012500, -0.020000, -0.037500, -0.067500, -0.042500, -0.090000, -0.052500, -0.070000, -0.045000
-#*# 	-0.045000, -0.062500, -0.065000, -0.082500, -0.052500, -0.100000, -0.052500, -0.045000, -0.020000
-#*# 	-0.047500, -0.052500, -0.060000, -0.090000, -0.070000, -0.110000, -0.077500, -0.072500, -0.042500
-#*# 	-0.167500, -0.160000, -0.135000, -0.142500, -0.107500, -0.140000, -0.092500, -0.070000, -0.025000
-#*# x_count = 9
-#*# y_count = 9
+#*# 	  -0.085000, -0.017500, -0.010000
+#*# 	  -0.072500, -0.037500, -0.025000
+#*# 	  -0.077500, -0.052500, -0.012500
+#*# x_count = 3
+#*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
-#*# algo = bicubic
+#*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 35.0
-#*# max_x = 269.96000000000004
-#*# min_y = 35.0
-#*# max_y = 269.96
+#*# min_x = 190.89
+#*# max_x = 239.37
+#*# min_y = 55.45
+#*# max_y = 103.93
 #*#
 #*# [extruder]
 #*# control = pid
@@ -321,4 +263,4 @@ aliases:
 #*# pid_kd = 1684.713
 #*#
 #*# [bltouch]
-#*# z_offset = 2.277
+#*# z_offset = 1.877
