setup temp based lcd colour

--- a/macros.cfg
+++ b/macros.cfg
@@ -1,63 +1,89 @@
 
 # Custom macros
-
-[gcode_macro G29]
-gcode:
- G28
- BED_MESH_PROFILE LOAD="default"
- 
-#[gcode_macro G34]
-#gcode:
-#     G28
-#     Z_TILT_ADJUST		
-
-[gcode_macro G35]
-gcode:
-     G28
-     SCREWS_TILT_CALCULATE
-
 [gcode_macro START_PRINT]
-
 gcode:
-    # Reference https://github.com/Klipper3d/klipper/blob/master/docs/Command_Templates.md#template-expansion
-    # On how to override default parameters
-    {% set BED_TEMP = 60 %}
-    {% set EXTRUDER_TEMP = 200 %}
     # Home the printer
 	G28
+    G90 ;Absolute positioning
+    M220 S100 ;Reset feedrate
+    M221 S100 ;Reset flowrate
     #Probe Everytime
-	G29 
+	# G29 
 	#load saved mesh at print start instead of probe. Uncomment to use but comment out G29
-	#BED_MESH_PROFILE LOAD=x1   					 
-    # Use absolute coordinates
-    G90
-    # Move the nozzle near the bed
-    G1 X0 Y0 Z5 F3000
-    # Move the nozzle very close to the bed
-    G1 Z0.15 F300
-    G92 E0 ;Reset Extruder
-    G1 X20 Y5 Z0.3 F5000.0			   
-    G1 Z0.3 F1000 				    
-    G1 X200 Y5 F1500.0 E15 			   
-    G1 X200 Y5.3 Z0.3 F5000.0			    
-    G1 X5.3  Y5.3 Z0.3 F1500.0 E30 			
-    G1 Z3 F3000 				     
-    G21 ; set units to millimeters
-    G90 ; use absolute coordinates
+    BED_MESH_CLEAR
+    BED_MESH_CALIBRATE
+
+    M109 S210 ; set temperature and wait for it to be reached
+
+    LINE_PURGE
+
     M83 ; use relative	distances for extrusion
     G92 E0
 
 [gcode_macro END_PRINT]
+description: "G-code to run at the end of a print. Replace your slicer's end G-code with this"
 gcode:
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # Move nozzle away from print while retracting
-    G91
-    G1 X-2 Y-2 E-3 F300
-    # Raise nozzle by 10mm
-    G1 Z30 F3000
-    G90
-    # Disable steppers
-    M84
+  M104 S0 ;Turn-off hotend
+  M106 S0 ;Turn-off fan
+  M140 S0 ;Turn-off bed
+
+  SAFE_RETRACT
+  SAFE_PARK
+
+  M84 X Y E ;Disable all steppers but Z
+
+# https://github.com/dudeofawesome/klipper-config/blob/master/macros/safe_park.cfg
+[gcode_macro SAFE_PARK]
+description:
+  "Park the print head in a safe location
+  @param {float} [X=200] - The target hotend temp
+  @param {float} [Y=200] - The target hotend temp
+  @param {bool} [Z_MOVE=true] - Whether or not to move the Z axis. This can be useful if you've already moved on Z"
+gcode:
+  SAVE_GCODE_STATE NAME=safe_park
+
+  ##### set park positon for x and y #####
+  # default is your max position from your printer.cfg
+  {% set x_park = params.X|default(printer.toolhead.axis_minimum.x + 5.0)|float %}
+  {% set y_park = params.Y|default(printer.toolhead.axis_maximum.y - 5.0)|float %}
+  {% set should_park_z = params.Z_MOVE|default('true')|string %}
+  ##### calculate safe lift position #####
+  {% set max_z = printer.toolhead.axis_maximum.z|float %}
+  {% set current_z = printer.toolhead.position.z|float %}
+  {% set jump_z = 20.0|float %}
+  {% if (current_z + jump_z) < max_z %}
+    {% set z_safe = (current_z + jump_z) %}
+  {% else %}
+    {% set z_safe = max_z %}
+  {% endif %}
+  ##### end of definitions #####
+
+  {% if "xyz" in printer.toolhead.homed_axes %}
+    G90 ;Use absolute coordinates
+    {% if should_park_z|lower == 'true' %}
+      G1 Z{z_safe} F900
+    {% endif %}
+    G1 X{x_park} Y{y_park} F6000
+  {% else %}
+    {action_respond_info("Printer not homed")}
+  {% endif %}
+
+  RESTORE_GCODE_STATE NAME=safe_park
+
+[gcode_macro SAFE_RETRACT]
+description: Retract
+gcode:
+  SAVE_GCODE_STATE NAME=safe_retract
+
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    M83 ;Relative extrusion
+    G91 ;Relative positioning
+
+    G10 ;Retract filament
+    G1 Z0.2 F2400 ;Raise Z
+    G1 E-2 F300 ;Retract filament 2mm to prevent oozing
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}
+
+  RESTORE_GCODE_STATE NAME=safe_retract
