--- a/printer.cfg
+++ b/printer.cfg
@@ -2,6 +2,7 @@
 [include macros.cfg]
 [include KAMP/adaptive_mesh.cfg]
 [include KAMP/line_purge.cfg]
+[include random/led_progress.cfg]
 
 [virtual_sdcard]
 path: ~/printer_data/gcodes
