--- a/macros.cfg
+++ b/macros.cfg
@@ -2,23 +2,23 @@
 # Custom macros
 [gcode_macro START_PRINT]
 gcode:
-    # Home the printer
-	G28
-    G90 ;Absolute positioning
-    M220 S100 ;Reset feedrate
-    M221 S100 ;Reset flowrate
-    #Probe Everytime
-	# G29 
-	#load saved mesh at print start instead of probe. Uncomment to use but comment out G29
-    BED_MESH_CLEAR
-    BED_MESH_CALIBRATE
+  CLEAR_PAUSE
+  # Home the printer
+  G28
+  G90 ;Absolute positioning
+  M220 S100 ;Reset feedrate
+  M221 S100 ;Reset flowrate
+  
+  #Probe Everytime - KAMP
+  BED_MESH_CLEAR
+  BED_MESH_CALIBRATE
 
-    M109 S210 ; set temperature and wait for it to be reached
+  M109 S210 ; set temperature and wait for it to be reached
 
-    LINE_PURGE
+  LINE_PURGE
 
-    M83 ; use relative	distances for extrusion
-    G92 E0
+  M83 ; use relative	distances for extrusion
+  G92 E0
 
 [gcode_macro END_PRINT]
 description: "G-code to run at the end of a print. Replace your slicer's end G-code with this"
