attempt moving to github config

--- a/SidewinderX1.cfg
+++ b/SidewinderX1.cfg
@@ -1,11 +1,7 @@
 [include mainsail.cfg]
 [include macros.cfg]
-[include KAMP/adaptive_mesh.cfg]
-[include KAMP/line_purge.cfg]
-[include random/led_progress.cfg]
-
-[virtual_sdcard]
-path: ~/printer_data/gcodes
+[include KAMP_Settings.cfg]
+[include led_progress.cfg]
 
 [display_status]
 
@@ -201,8 +197,6 @@ aliases:
     EXP2_1=PB3, EXP2_3=PC6, EXP2_5=PC4, EXP2_7=PL0,  EXP2_9=<GND>,
     EXP2_2=PB1, EXP2_4=PB0, EXP2_6=PB2, EXP2_8=PG0, EXP2_10=<NC>
     # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp1"
-
-    
 # See the MKS Lcd Config path file for definitions of common LCD displays.
 [include mks_lcd_12864_v3.cfg]
 
@@ -239,9 +233,9 @@ aliases:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.085000, -0.017500, -0.010000
-#*# 	  -0.072500, -0.037500, -0.025000
-#*# 	  -0.077500, -0.052500, -0.012500
+#*# 	-0.085000, -0.017500, -0.010000
+#*# 	-0.072500, -0.037500, -0.025000
+#*# 	-0.077500, -0.052500, -0.012500
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
@@ -261,9 +255,9 @@ aliases:
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 37.283
-#*# pid_ki = 0.206
-#*# pid_kd = 1684.713
+#*# pid_kp = 38.309
+#*# pid_ki = 0.235
+#*# pid_kd = 1564.442
 #*#
 #*# [bltouch]
 #*# z_offset = 1.877
