--- a/macros.cfg
+++ b/macros.cfg
@@ -2,23 +2,23 @@
 # Custom macros
 [gcode_macro START_PRINT]
 gcode:
-  CLEAR_PAUSE
-  # Home the printer
-  G28
-  G90 ;Absolute positioning
-  M220 S100 ;Reset feedrate
-  M221 S100 ;Reset flowrate
-  
-  #Probe Everytime - KAMP
-  BED_MESH_CLEAR
-  BED_MESH_CALIBRATE
+    # Home the printer
+	G28
+    G90 ;Absolute positioning
+    M220 S100 ;Reset feedrate
+    M221 S100 ;Reset flowrate
+    #Probe Everytime
+	# G29 
+	#load saved mesh at print start instead of probe. Uncomment to use but comment out G29
+    BED_MESH_CLEAR
+    BED_MESH_CALIBRATE
 
-  M109 S210 ; set temperature and wait for it to be reached
+    M109 S210 ; set temperature and wait for it to be reached
 
-  LINE_PURGE
+    LINE_PURGE
 
-  M83 ; use relative	distances for extrusion
-  G92 E0
+    M83 ; use relative	distances for extrusion
+    G92 E0
 
 [gcode_macro END_PRINT]
 description: "G-code to run at the end of a print. Replace your slicer's end G-code with this"
@@ -31,44 +31,6 @@ gcode:
   SAFE_PARK
 
   M84 X Y E ;Disable all steppers but Z
-
-# https://github.com/dudeofawesome/klipper-config/blob/master/macros/safe_park.cfg
-[gcode_macro SAFE_PARK]
-description:
-  "Park the print head in a safe location
-  @param {float} [X=200] - The target hotend temp
-  @param {float} [Y=200] - The target hotend temp
-  @param {bool} [Z_MOVE=true] - Whether or not to move the Z axis. This can be useful if you've already moved on Z"
-gcode:
-  SAVE_GCODE_STATE NAME=safe_park
-
-  ##### set park positon for x and y #####
-  # default is your max position from your printer.cfg
-  {% set x_park = params.X|default(printer.toolhead.axis_minimum.x + 5.0)|float %}
-  {% set y_park = params.Y|default(printer.toolhead.axis_maximum.y - 5.0)|float %}
-  {% set should_park_z = params.Z_MOVE|default('true')|string %}
-  ##### calculate safe lift position #####
-  {% set max_z = printer.toolhead.axis_maximum.z|float %}
-  {% set current_z = printer.toolhead.position.z|float %}
-  {% set jump_z = 20.0|float %}
-  {% if (current_z + jump_z) < max_z %}
-    {% set z_safe = (current_z + jump_z) %}
-  {% else %}
-    {% set z_safe = max_z %}
-  {% endif %}
-  ##### end of definitions #####
-
-  {% if "xyz" in printer.toolhead.homed_axes %}
-    G90 ;Use absolute coordinates
-    {% if should_park_z|lower == 'true' %}
-      G1 Z{z_safe} F900
-    {% endif %}
-    G1 X{x_park} Y{y_park} F6000
-  {% else %}
-    {action_respond_info("Printer not homed")}
-  {% endif %}
-
-  RESTORE_GCODE_STATE NAME=safe_park
 
 [gcode_macro SAFE_RETRACT]
 description: Retract
